# trader

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODE_REVIEW.md  Dockerfile  GEMINI.md  README.md  STRAT.md  TODO.md  check_imports.py  config.py  docker-compose.yml  find_vix_epic.py  inspect_ig_calendar.py  inspect_ls.py  investigate_market.py  main.py  manual_ig_order.sh  package-lock.json  package.json  power_law_strategy_notes.md  pyproject.toml  run_ui.sh  tasks.py  test_stream.py  verify_stream.py  verify_stream_direct.py  verify_stream_manager_integration.py  watchdog.py
src/: database.py  gemini_analyst.py  ig_client.py  market_data_provider.py  market_status.py  news_fetcher.py  notification_service.py  opportunity_analyzer.py  scorecard.py  strategy_engine.py  stream_manager.py  stream_service.js  trade_executor.py  trade_logger_db.py  trade_monitor_db.py  trade_supervisor.py  yfinance_client.py
tests/: mocks.py  test_caching.py  test_concurrency.py  test_database.py  test_db_isolation.py  test_e2e_advanced.py  test_e2e_flow.py  test_e2e_lifecycle.py  test_e2e_spread.py  test_gemini_analyst.py  test_gemini_retries.py  test_holiday_override.py  test_ig_client.py  test_market_data_failures.py  test_market_data_provider.py  test_market_status.py  test_mocks.py  test_scorecard.py  test_slippage_handling.py  test_strategy_engine.py  test_strategy_re_evaluation.py  test_strategy_risk_floor.py  test_strategy_timeout.py  test_stream_manager.py  test_tp_override.py  test_trade_executor.py  test_trade_logger_db.py  test_trade_monitor_breakeven.py  test_trade_monitor_db.py  test_trade_monitor_db_deleted.py  test_trade_supervisor.py
web_ui/: .gitignore  pyproject.toml  requirements.txt  rxconfig.py
web_ui/web_ui/: web_ui.py
