[project]
name = "trader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.1",
    "feedparser>=6.0.12",
    "google-genai>=0.8.0",
    "holidays>=0.85",
    "munch>=4.0.0",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
    "reflex>=0.6.4",
    "requests>=2.32.5",
    "tenacity>=9.1.2",
    "trading-ig>=0.0.22",
]

[dependency-groups]
dev = [
    "invoke>=2.2.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.1",
    "ruff>=0.14.9",
]

[tool.uv.workspace]
members = [
    "web_ui",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
]
